--- a/adamantine-notes/src/styles/Home.module.css
+++ b/adamantine-notes/src/styles/Home.module.css
@@ -2,38 +2,83 @@
 
 .container {
   display: flex;
-  margin: 10px;
+  margin: 0;
 }
 
 .left {
   width: 20rem;
 }
 
+.btnContainer {
+  width: 100%;
+  margin-right: 0px;
+  height: 625px;
+  right: 5%;
+  bottom: 5%;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  align-items: flex-end;
+  flex-direction: row-reverse;
+}
+
 .button {
-  width: 15rem;
-  height: 2rem;
-  cursor: pointer;
-  background-color: black;
-  color: whiteSmoke;
-  border: black;
+  background-color: #FFFFFF;
+  border: none;
+  border-radius: 50%;
+  color: #532893;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 30px;
+  margin: 4px 2px;
+  width: 80px;
+  height: 80px;
   font-family: "Roboto";
+  box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.25);
 }
 
-.input{
-  width: 15rem;
-  height: 2rem;
+.button:hover {
+  background-color: #53289380;
+}
+
+.inputContainer {
+  width: 30%;
+  height: 30%;
   outline: none;
-  border-radius: 5px;
-  border: 1px solid gray;
-  margin: 5px 0;
+  border-radius: 20px;
+  border: 1px solid #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10%;
+  background-color: #53289380;
+  padding: 5%;
 }
 
-.saveBtn{
-  width: 15rem;
-  height: 2rem;
+.input {
+  border-radius: 20px;
+  border: none;
+  margin-bottom: 5%;
+  padding: 3%;
+}
+
+.saveBtn {
   cursor: pointer;
-  background-color: rgb(119, 27, 27);
+  background-color: #532893;
   color: whitesmoke;
-  border: rgb(119, 27, 27);
+  border: none;
+  border-radius: 20px;
   font-family: 'Roboto';
+  padding: 3%;
+}
+
+.notesInner {
+  margin-top: 0.5rem;
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 15rem;
+  text-align: center;
+  cursor: pointer;
+  font-family: "Roboto";
 }
