--- a/adamantine-notes/src/styles/globals.css
+++ b/adamantine-notes/src/styles/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -83,7 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-}
+} */
 /*
 body {
   color: rgb(var(--foreground-rgb));
@@ -95,7 +95,7 @@ body {
     rgb(var(--background-start-rgb));
 }
 */
-a {
+/* a {
   color: inherit;
   text-decoration: none;
 }
@@ -104,4 +104,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
