--- a/adamantine-notes/src/styles/Home.module.css
+++ b/adamantine-notes/src/styles/Home.module.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+.backgroundHome {
+  width: 100%;
+}
+
 .container {
   display: flex;
   margin: 0;
@@ -23,7 +27,6 @@
 }
 
 .button {
-  background-color: #FFFFFF;
   border: none;
   border-radius: 50%;
   color: #532893;
@@ -31,12 +34,16 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 30px;
+  font-size: 50px;
   margin: 4px 2px;
   width: 80px;
   height: 80px;
   font-family: "Roboto";
+  background: rgba(255, 255, 255, 0.4);
   box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .button:hover {
@@ -45,32 +52,69 @@
 
 .inputContainer {
   width: 30%;
-  height: 30%;
-  outline: none;
+  height: 40%;
   border-radius: 20px;
-  border: 1px solid #FFFFFF;
+  border-width: 1px;
+  border-color: rgba(255, 255, 255, 0.8);
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   margin-left: 10%;
-  background-color: #53289380;
-  padding: 5%;
+  padding: 4%;
+  box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(10px);
+  background: linear-gradient(178.66deg, rgba(255, 255, 255, 0.36) 1.14%, rgba(255, 255, 255, 0) 98.86%);
+  position: absolute;
+  top: 15%;
+  left: 0;
 }
 
 .input {
   border-radius: 20px;
   border: none;
+  padding: 5%;
+  background: rgba(255, 255, 255, 0.15);
   margin-bottom: 5%;
-  padding: 3%;
+}
+
+.input::placeholder {
+  color: #FFFFFF;
+  font-style: italic;
+  opacity: 0.6;
+  font-family: "Roboto";
+}
+
+.textArea {
+  height: 80%;
+  border-radius: 20px;
+  border: none;
+  padding: 5%;
+  background: rgba(255, 255, 255, 0.15);
+  margin-bottom: 5%;
+}
+
+.textArea::placeholder {
+  color: #FFFFFF;
+  font-style: italic;
+  opacity: 0.6;
+  font-family: "Roboto";
 }
 
 .saveBtn {
-  cursor: pointer;
-  background-color: #532893;
-  color: whitesmoke;
+  width: 47px;
+  height: 50px;
   border: none;
-  border-radius: 20px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #532893cc;
+  color: #FFFFFF;
   font-family: 'Roboto';
+  font-size: 20px;
   padding: 3%;
+}
+
+.saveBtn:hover {
+  background: rgba(255, 255, 255, 0.4);
 }
 
 .notesInner {
@@ -81,4 +125,12 @@
   text-align: center;
   cursor: pointer;
   font-family: "Roboto";
+}
+
+.notesDisplay {
+  background-color: #532893;
+  width: 200px;
+  height: 200px;
+  color: white;
+  margin-right: 0;
 }
