--- a/adamantine-notes/src/styles/globals.css
+++ b/adamantine-notes/src/styles/globals.css
@@ -78,12 +78,15 @@
   padding: 0;
   margin: 0;
 }
-
+*/
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-} */
+  background-image: url("../../public/img/backgroundHome.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+} 
 /*
 body {
   color: rgb(var(--foreground-rgb));
