--- a/adamantine-notes/src/styles/Home.module.css
+++ b/adamantine-notes/src/styles/Home.module.css
@@ -11,11 +11,12 @@
 
 .homeContainer {
   width: 100%;
+  margin-top: 7%;
+  margin-left: 6%;
 }
 
 .btnContainer {
   width: 100%;
-  margin-right: 0px;
   height: 625px;
   right: 5%;
   bottom: 5%;
@@ -66,6 +67,7 @@
   position: absolute;
   top: 15%;
   left: 0;
+  z-index: 10;
 }
 
 .input {
@@ -110,26 +112,63 @@
   font-family: 'Roboto';
   font-size: 20px;
   padding: 3%;
+  z-index: 10;
 }
 
 .saveBtn:hover {
   background: rgba(255, 255, 255, 0.4);
 }
 
-.notesInner {
-  margin-top: 0.5rem;
-  border: 1px solid black;
-  border-radius: 10px;
-  width: 15rem;
-  text-align: center;
-  cursor: pointer;
+.eachNote {
+  margin-bottom: 5%;
+  border-radius: 20px;
+  width: 70%;
+  height: 40vh;
+  text-align: left;
   font-family: "Roboto";
+  padding: 7%;
+  box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(10px);
+  background: linear-gradient(178.66deg, rgba(255, 255, 255, 0.36) 1.14%, rgba(255, 255, 255, 0) 98.86%);
+  display: flex;
+  justify-content: space-between;
+
 }
 
-.notesDisplay {
-  background-color: #532893;
-  width: 200px;
-  height: 200px;
+.notesDisplayContainer {
+  width: 100%;
+  height: 100%;
   color: white;
-  margin-right: 0;
+}
+
+.noteTitle,
+.noteText {
+  margin-top: 0;
+}
+
+.noteTitle {
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.noteText {
+  font-weight: 200;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+.iconsContainer {
+  display: flex;
+  justify-content: flex-end;
+  align-self: flex-end;
+  flex-direction: row;
+}
+
+.edit:hover {
+  cursor: pointer;
+}
+
+.delete {
+  margin-left: 50%;
+  cursor: pointer;
 }
