--- a/adamantine-notes/src/styles/globals.css
+++ b/adamantine-notes/src/styles/globals.css
@@ -79,9 +79,10 @@
   margin: 0;
 }
 */
-html,
+
 body {
   max-width: 100vw;
+  height: 100%;
   overflow-x: hidden;
   background-image: url("../../public/img/backgroundHome.png");
   background-size: cover;
