--- a/adamantine-notes/src/styles/Home.module.css
+++ b/adamantine-notes/src/styles/Home.module.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 .container {
-  display: flex;
   margin: 0;
 }
 
@@ -59,7 +58,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-left: 10%;
+  margin-left: 35%;
+  margin-top: 20%;
   padding: 4%;
   box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(10px);
@@ -102,7 +102,7 @@
 }
 
 .saveBtn {
-  width: 47px;
+  width: 43px;
   height: 50px;
   border: none;
   border-radius: 50%;
@@ -113,6 +113,10 @@
   font-size: 20px;
   padding: 3%;
   z-index: 10;
+  display: flex;
+  align-self: flex-end;
+  justify-content: center;
+  align-items: center;
 }
 
 .saveBtn:hover {
@@ -122,7 +126,7 @@
 .eachNote {
   margin-bottom: 5%;
   border-radius: 20px;
-  width: 70%;
+  width: 80%;
   height: 40vh;
   text-align: left;
   font-family: "Roboto";
@@ -136,9 +140,13 @@
 }
 
 .notesDisplayContainer {
-  width: 100%;
-  height: 100%;
+  width: 40%;
+  height: 50%;
   color: white;
+  margin-left: 6%;
+  margin-top: 3%;
+  z-index: -15;
+  position: sticky;
 }
 
 .noteTitle,
@@ -148,12 +156,12 @@
 
 .noteTitle {
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .noteText {
   font-weight: 200;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 25px;
 }
 
@@ -171,4 +179,29 @@
 .delete {
   margin-left: 50%;
   cursor: pointer;
+}
+
+/* HOME.JS */
+
+.headerTitle {
+  font-family: 'Roboto';
+  font-size: 30px;
+  font-weight: 300;
+  color: #FFFFFF;
+  opacity: 0.7;
+}
+
+.headerIcons {
+  margin-left: 30%;
+  display: flex;
+}
+
+.logoutIcon {
+  margin-left: 20%;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
