--- a/adamantine-notes/src/styles/globals.css
+++ b/adamantine-notes/src/styles/globals.css
@@ -80,6 +80,14 @@
 }
 */
 
+header {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  margin: 5%;
+}
+
 body {
   max-width: 100vw;
   height: 100%;
@@ -87,6 +95,7 @@ body {
   background-image: url("../../public/img/backgroundHome.png");
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 } 
 /*
 body {
