--- a/adamantine-notes/src/styles/Home.module.css
+++ b/adamantine-notes/src/styles/Home.module.css
@@ -59,7 +59,7 @@
   flex-direction: column;
   justify-content: space-between;
   margin-left: 35%;
-  margin-top: 20%;
+  margin-top: 15%;
   padding: 4%;
   box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(10px);
@@ -178,6 +178,8 @@
 
 .delete {
   margin-left: 50%;
+  background: none;
+  border: none;
 }
 
 .delete:hover {
