--- a/adamantine-notes/src/styles/globals.css
+++ b/adamantine-notes/src/styles/globals.css
@@ -85,7 +85,8 @@ header {
   justify-content: space-between;
   flex-direction: row;
   align-items: center;
-  margin: 5%;
+  margin: 3%;
+  padding-right: 2%;
 }
 
 body {
